Fixed horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ body {
   color: #2b2b2b;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+}
+
+.body__inner {
   overflow-x: hidden;
 }
 
