--- a/scss/global.scss
+++ b/scss/global.scss
@@ -38,8 +38,10 @@ body{
     line-height: 1.17;
     color: $dark_text_color;
     font-family: "Roboto", sans-serif;
-    // font-family: "Montserrat", sans-serif;
     font-weight: 400;
+}
+
+.body__inner{
     overflow-x: hidden;
 }
 
